# referencer

./: .gitignore  AUTHORS  Makefile.am  README  TODO  apps.referencer.gschema.xml  configure.ac  meson.build  referencer.spec.in
data/: preferences.ui
plugins/: ads.py  bibtex-test.py  dblp.py  expj.py  genkey.py  google-books.py  isi-plugin.py  lyx.py  pubmed.py  search-test.py
po/: POTFILES.in
src/: ArxivPlugin.cpp  BibData.cpp  BibUtils.cpp  BibUtils.h  CaseFoldCompare.h  Document.C  Document.cpp  Document.h  DocumentCellRenderer.cpp  DocumentCellRenderer.h  DocumentList.cpp  DocumentProperties.cpp  DocumentView.cpp  DocumentView.h  Library.cpp  Library.h  Linker.cpp  Linker.h  Plugin.h  PluginManager.cpp  Preferences.cpp  Preferences.h  PythonDocument.cpp  PythonPlugin.cpp  RefWindow.cpp  RefWindow.h  ThumbnailGenerator.cpp  Transfer.cpp  Utility.cpp  Utility.h  cpprossRefPlugin.cpp  main.cpp  ustring.h
